syntax = "proto3";

package person_center;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "universal.proto";

service Organization {
    rpc OrganizationList (OrganizationListReq) returns (OrganizationsResponse);
    rpc OrganizationDetail (OrganizationDetailReq) returns (OrganizationResponse);
    rpc UpdateOrganization (UpdateOrganizationReq) returns (OrganizationResponse);
    rpc InsertOrganization (InsertOrganizationReq) returns (OrganizationResponse);
    rpc DeleteOrganization (OrganizationDetailReq) returns (Report);
}

message OrganizationListReq {
    optional int64 id = 1;
    optional string name = 2;
}

message OrganizationDetailReq {
    int64 id = 1;
}

message InsertOrganizationReq {
    string name = 1;
    optional google.protobuf.Timestamp period_of_validity = 2;
}

message UpdateOrganizationReq {
    int64 id = 1;
    optional string name = 2;
    optional google.protobuf.Timestamp period_of_validity = 3;
}

message OrganizationResponse {
    int64 id = 1;
    string name = 2;
    google.protobuf.Timestamp create_time = 3;
    google.protobuf.Timestamp update_time = 4;
    bool accessible = 5;
    optional google.protobuf.Timestamp period_of_validity = 6;
}

message OrganizationsResponse {
    repeated OrganizationResponse organizations = 1;
}
