syntax = "proto3";

package person_center;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "universal.proto";

service Policy {
    rpc PolicyList (PolicyListReq) returns (PoliciesResponse);
    rpc PolicyDetail (PolicyDetailReq) returns (PolicyResponse);
    rpc UpdatePolicy (UpdatePolicyReq) returns (PolicyResponse);
    rpc InsertPolicy (InsertPolicyReq) returns (PolicyResponse);
    rpc DeletePolicy (PolicyDetailReq) returns (Report);
}

message PolicyListReq {
    optional int64 id = 1;
    optional string name = 2;
    int64 organization = 3;
}

message PolicyDetailReq {
    int64 id = 1;
    int64 organization = 2;
}

message InsertPolicyReq {
    string name = 1;
    int64 organization = 2;
}

message UpdatePolicyReq {
    int64 id = 1;
    optional string name = 2;
    int64 organization = 3;
}

message PolicyResponse {
    int64 id = 1;
    string name = 2;
    google.protobuf.Timestamp create_time = 3;
    google.protobuf.Timestamp update_time = 4;
    int64 organization = 5;
    int64 owner = 6;
}

message PoliciesResponse {
    repeated PolicyResponse policies = 1;
}
