syntax = "proto3";

package person_center;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "universal.proto";

service Role {
    rpc RoleList (RoleListReq) returns (RolesResponse);
    rpc RoleDetail (RoleDetailReq) returns (RoleResponse);
    rpc UpdateRole (UpdateRoleReq) returns (RoleResponse);
    rpc InsertRole (InsertRoleReq) returns (RoleResponse);
    rpc DeleteRole (RoleDetailReq) returns (Report);
}

message RoleListReq {
    optional int64 id = 1;
    optional string name = 2;
    int64 organization = 3;
}

message RoleDetailReq {
    int64 id = 1;
    int64 organization = 2;
}

message InsertRoleReq {
    string name = 1;
    int64 organization = 2;
}

message UpdateRoleReq {
    int64 id = 1;
    optional string name = 2;
    int64 organization = 3;
}

message RoleResponse {
    int64 id = 1;
    string name = 2;
    google.protobuf.Timestamp create_time = 3;
    google.protobuf.Timestamp update_time = 4;
    int64 organization = 5;
    int64 owner = 6;
}

message RolesResponse {
    repeated RoleResponse roles = 1;
}
