syntax = "proto3";

package person_center;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "universal.proto";

service User {
    rpc UserList (UserListReq) returns (UsersResponse);
    rpc UserDetail (UserDetailReq) returns (UserResponse);
    rpc UpdateUser (UpdateUserReq) returns (UserResponse);
    rpc InsertUser (InsertUserReq) returns (UserResponse);
    rpc DeleteUser (UserDetailReq) returns (Report);
    rpc Login (LoginForm) returns (Logged);
    rpc CheckPermission (CheckPermissionReq) returns (Accessable);
}

message UserListReq {
    optional int64 id = 1;
    optional string name = 2;
    int64 organization = 3;
}

message UserDetailReq {
    int64 id = 1;
    int64 organization = 2;
}

message UpdateUserReq {
    int64 id = 1;
    optional string name = 2;
    optional string password = 3;
    optional string email = 4;
    optional string phone = 5;
    optional google.protobuf.Any info = 6;
    int64 organization = 7;
}

message InsertUserReq {
    string name = 1;
    string password = 2;
    optional string email = 3;
    optional string phone = 4;
    optional google.protobuf.Any info = 5;
    int64 organization = 6;
}

message UserResponse {
    int64 id = 1;
    string name = 2;
    string password = 3;
    string email = 4;
    string phone = 5;
    bool online = 6;
    google.protobuf.Any info = 7;
    google.protobuf.Timestamp create_time = 8;
    google.protobuf.Timestamp update_time = 9;
    int64 organization = 10;
}

message UsersResponse {
    repeated UserResponse users = 1;
}

message LoginForm {
    string username = 1;
    string password = 2;
}

message Logged {
    string access_token = 1;
    string refresh_token = 2;
}

message CheckPermissionReq {
    int64 user_id = 1;
    int64 resource_id = 2;
}
